--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run kanbanweb:serve-ssr",
+    "serve:ssr": "node dist/kanbanweb/server/main.js",
+    "build:ssr": "ng build --prod && ng run kanbanweb:server:production",
+    "prerender": "ng run kanbanweb:prerender"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +24,10 @@
     "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
+    "@angular/platform-server": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@nguniversal/express-engine": "^10.1.0",
+    "express": "^4.15.2",
     "flexboxgrid-sass": "^8.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -30,6 +37,8 @@
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
