--- a/package.json
+++ b/package.json
@@ -27,21 +27,24 @@
     "@angular/platform-server": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@nguniversal/express-engine": "^10.1.0",
+    "@angular/material-moment-adapter": "^10.0.0",
     "express": "^4.15.2",
     "flexboxgrid-sass": "^8.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "angular-in-memory-web-api": "~0.11.0",
+    "moment": "^2.26.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
+    "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
     "@nguniversal/builders": "^10.1.0",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
